# python-course

./: .gitignore  LICENSE  README_sphinx.md  pyproject.toml  requirements.txt  test.py  weather_data_analyzer.py
examples/: data_fetcher.py  data_processer.py  matplotlib_example.py
examples/sympy/: double_integral.py  sympy_basics.py
latex/: experiments.tex  lecture13.tex  references.bib  sample_latex_script.tex
macro/: aggregators.py  cleansers.py  data_manager.py  income_levels.csv  main.py  oecd_countries.csv  visualizers.py
macro/Emissions_Data/: Carbon_Project.py  NOAA_2024_Atmospheric_CO2.csv
macro/GDP_PPP/: World_Bank_2022_WDI.xls  World_Bank_WDI.py
macro/Population_Data/: UN Population Projections Medium variant.csv  UN_Pop_Data.py
ml/: cross_validation.py  dimensionality_reduction.py  feature_engineering.py  flask_serving.py  grid_search.py  keras_neural_network.py  pytorch_neural_network.py  regression.py  supervised_learning.py  unsupervised_learning.py
portfolio-analytics/: README.md  pyproject.toml  requirements.txt
portfolio-analytics/docs/source/: conf.py  index.rst  modules.rst  portfolio_analytics.rst
portfolio-analytics/examples/: example_usage.py
tutorial/: tutorial10_notebook.ipynb  tutorial10_notebook_solution.ipynb  tutorial2_notebook.ipynb  tutorial2_notebook_solution.ipynb  tutorial3_notebook.ipynb  tutorial3_notebook_solution.ipynb  tutorial4_notebook.ipynb  tutorial4_notebook_solution.ipynb  tutorial5_notebook.ipynb  tutorial5_notebook_solution.ipynb  tutorial6_notebook.ipynb  tutorial6_notebook_solution.ipynb  tutorial9_notebook.ipynb  tutorial9_notebook_solution.ipynb
tutorial/data/: sales_data.txt
