[tool.poetry]
name = "python-course"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
portfolio-analytics = {path = "./portfolio-analytics", develop = true}
matplotlib = "^3.10.0"
statsmodels = "^0.14.4"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
