[tool.poetry]
name = "python-course"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
portfolio-analytics = {path = "./portfolio-analytics", develop = true}
matplotlib = "^3.10.0"
statsmodels = "^0.14.4"
tensorflow-io-gcs-filesystem = "0.31.0"
xgboost = "^2.1.3"
tensorflow = "^2.18.0"
torch = "^2.6.0"
flask = "^3.1.0"
scikit-learn = "^1.6.1"
sympy = "1.13.1"
antlr4-python3-runtime = "4.11"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
jupyter = "^1.1.1"
sphinx-rtd-theme = "^3.0.2"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
