[tool.poetry]
name = "portfolio-analytics"
version = "0.1.1"
description = "A small Python package providing simple portfolio analytics & optimization."
authors = ["Marcus Rockel <marcus.rockel@finance.uni-freiburg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^2.0.0"
scipy = "^1.10.0"
yfinance = "^0.2.25"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
